--- a/package.json
+++ b/package.json
@@ -7,23 +7,28 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:restaurant-app": "node dist/restaurant-app/server/server.mjs"
+    "serve:ssr:restaurant-app": "node dist/restaurant-app/server/server.mjs",
+    "dev": "ng serve --configuration development --open"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.0",
-    "@angular/common": "^18.0.0",
+    "@angular/cdk": "^19.2.7",
+    "@angular/common": "^18.2.13",
     "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
+    "@angular/core": "^18.2.13",
+    "@angular/forms": "^18.2.13",
+    "@angular/material": "^19.2.7",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/platform-server": "^18.0.0",
-    "@angular/router": "^18.0.0",
+    "@angular/router": "^18.2.13",
     "@angular/ssr": "^18.0.2",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
